# base-orogen-types

./: CMakeLists.txt  README.md  base.orogen  manifest.xml  test.cpp
base/wrappers/: Eigen.hpp  eigen.h  pose.h  waypoint.h
base/wrappers/geometry/: NURBSCurve3D.h  Spline.hpp  spline.h
base/wrappers/samples/: imu.h  point_cloud.h  rigid_body_acceleration.h  rigid_body_state.h
cmake/: FindSISL.cmake
lib/base/: immigration.rb
scripts/: typelib.rb
src/: CMakeLists.txt  NURBSCurve3D.cpp  log_export.rb  log_migration.rb  spline.cpp
test/: CMakeLists.txt  test.cpp  test_eigen_wrappers.cpp  test_matrixx.cpp  test_nurbs.cpp  test_typelib_convertions.rb
typekit/: Opaques.cpp  Opaques.hpp  ROSConvertions.cpp  ROSConvertions.hpp
